--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2>Nossos Produtos</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="images/pao-tradicional.jpg" alt="Pão de Queijo Tradicional" class="product-image">
+                    <img src="https://drive.google.com/uc?export=view&id=1MD7rPK-xhtmLdxegXeC8IpPkH3qcW2g6" alt="Pão de Queijo Tradicional" class="product-image">
                     <div class="product-info">
                         <h3>Pão de Queijo Tradicional</h3>
                         <p>Delicioso pão de queijo mineiro tradicional</p>
