--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2>Nossos Produtos</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="pao-tradicional.jpg" alt="Pão de Queijo Tradicional" class="product-image" loading="lazy">
+                    <img src="https://drive.google.com/file/d/1MD7rPK-xhtmLdxegXeC8IpPkH3qcW2g6/view?usp=sharing" alt="Pão de Queijo Tradicional" class="product-image" loading="lazy">
                     <div class="product-info">
                         <h3>Pão de Queijo Tradicional</h3>
                         <p>Delicioso pão de queijo mineiro tradicional</p>
